# mnist-ann

./: CMakeLists.txt  Dataset.cpp  Dataset.h  NeuralNetwork.cpp  NeuralNetwork.h  load.cpp  load.h  main.cpp  test.cpp  util.cpp  util.h
